--- a/src/tecnhical.challenge.ioc/ioc.csproj
+++ b/src/tecnhical.challenge.ioc/ioc.csproj
@@ -1,20 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>console</RootNamespace>
-    <AssemblyName>technical.challenge.console</AssemblyName>
+    <RootNamespace>ioc</RootNamespace>
+    <AssemblyName>tecnhical.challenge.ioc</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\technical.challenge.domain\domain.csproj" />
     <ProjectReference Include="..\technical.challenge.services\services.csproj" />
-    <ProjectReference Include="..\tecnhical.challenge.ioc\ioc.csproj" />
   </ItemGroup>
 
 </Project>
